src/scss/components/_pagination.scss
.pagination {
	display: block;
	line-height: rem(38);
	list-style: none;
	margin-left: -10%;
	margin-right: -10%;
	margin-top: rem(27);
	padding: 0;
	text-align: center;

	.pagination-list {
		display: flex;
		margin: auto;
	}

	.previous,
	.next {
		height: rem(65);
	}

	.previous {
		margin-right: rem(6);
	}

	.next {
		margin-left: rem(6);
	}

	.pagination-link {
		background-color: $green-light;
		border: 0;
		border-radius: 100%;
		box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
		color: $green-dark;
		float: left;
		font-size: rem(18);
		font-weight: 400;
		height: rem(45);
		line-height: rem(45);
		margin: rem(10) rem(5);
		transform: perspective(rem(5)) translateZ(0);
		width: rem(45);
	}

	.pagination-link::before {
		border-radius: 100%;
		box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
		content: '';
		height: 100%;
		left: 0;
		opacity: 1;
		position: absolute;
		top: 0;
		width: 100%;
	}

	.pagination-link:hover::before,
	.pagination-link:focus::before,
	.pagination-link:active::before {
		left: rem(4);
		top: rem(4);
	}

	.pagination-ellipsis {
		margin: rem(9) rem(0);

		span {
			color: $blue-alt;
			font-size: rem(18);
		}
	}

	li {
		a.is-current {
			background-color: $green-pale;
			box-shadow: 0 0 0 rem(2) $green-dark inset;

			&::before {
				box-shadow: 0 0 0 rem(2) $green-dark inset;
			}
		}
	}

	li.hide-on-mobile {
		display: none;
	}

	li:first-child,
	li:last-child {
		display: flex;
		flex: 1;
	}

	.pagination-next,
	.pagination-previous {
		color: $green-dark;
		float: left;
		line-height: rem(45);
		margin: rem(10) rem(5);

		svg {
			fill: none;
			height: rem(24);
			stroke: currentColor;
			stroke-width: 2;
			width: rem(14);
		}
	}

	.pagination-previous {
		float: right;
	}

	.pagination-next {
		float: left;
	}

	.pagination-next:hover,
	.pagination-previous:hover,
	.pagination-next:focus,
	.pagination-previous:focus {
		background-color: transparent;

		svg {
			fill: currentColor;
			stroke-width: 0.25;
		}
	}
}

@include breakpoint-up(lg) {
	.pagination {
		line-height: rem(35);
		margin-left: auto;
		margin-right: auto;
		margin-top: rem(62);

		.previous,
		.next {
			margin: 0 rem(20);
		}

		.pagination-ellipsis {
			margin: rem(4) rem(0);

			span {
				font-size: rem(24);
			}
		}

		li.hide-on-mobile {
			display: block;
		}

		li:not(:first-child):not(:last-child) {
			padding-top: rem(4);
		}

		.pagination-list {
			width: rem(640);
		}

		.pagination-link {
			font-size: rem(24);
			height: rem(53);
			line-height: rem(53);
			margin: 0 rem(13);
			width: rem(53);
		}

		.pagination-next,
		.pagination-previous {
			line-height: rem(40);
		}
	}
}

// This media query breakpoint is for the Galaxy Fold screen.
@include breakpoint-down(xs) {
	.pagination .pagination-link {
		margin: rem(10) rem(3);
	}
}

